# continual-foragax

./: .gitignore  CHANGELOG.md  README.md  foragax.py  objects.py  pyproject.toml  registry.py  visualize.py
.agent/skills/jax-optimization/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  publish.yml  release.yml  ruff.yml  test.yml
dev/bench/: data.js
examples/: observation.py  plot.py  plot_square_wave.py  visualize.py
plots/: big_v5_data.npz
scripts/: profile_benchmark.py
src/foragax/: colors.py  env.py  objects.py  registry.py  rendering.py  weather.py
tests/: test_benchmark.py  test_biome_regeneration.py  test_biome_regret.py  test_foragax.py  test_optimize.py  test_registry.py
