[project]
name = "continual-foragax"
version = "0.1.0"
description = "A continual reinforcement learning benchmark"
readme = "README.md"
authors = [
    { name = "Steven Tang", email = "stang5@ualberta.ca" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnax>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
]

[project.scripts]
foragax = "foragax:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
