[project]
name = "continual-foragax"
version = "0.3.2"
description = "A continual reinforcement learning benchmark"
readme = "README.md"
authors = [
    { name = "Steven Tang", email = "stang5@ualberta.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "gymnax>=0.0.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.9",
]

[project.scripts]
foragax = "foragax:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.2"
tag_format = "$version"
version_files = ["pyproject.toml"]
